@@ -1,9 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+﻿<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.owasp</groupId>
 	<artifactId>benchmark</artifactId>
-    <version>1.2</version>
+	<version>1.2</version>
 	<packaging>war</packaging>
 	<name>OWASP Benchmark Project</name>
 	<url>https://www.owasp.org/index.php/Benchmark</url>
@@ -15,10 +15,10 @@
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.4.0</version>
+						<version>1.5.0</version>
 						<executions>
 							<execution>
-								<phase>validate</phase>
+								<phase>compile</phase>
 								<goals>
 									<goal>java</goal>
 								</goals>
@@ -31,7 +31,7 @@
 				</plugins>
 			</build>
 		</profile>
-
+		
 		<profile>
 			<id>benchmarkscore</id>
 			<build>
@@ -98,6 +98,7 @@
 			<id>deploy</id>
 			<properties>
 				<skipTests>true</skipTests>
+				<maven.war.webxml>${basedir}/src/config/web.xml</maven.war.webxml>
 			</properties>
 			<build>
 				<plugins>
@@ -152,123 +153,31 @@
 					<plugin>
 						<groupId>org.codehaus.cargo</groupId>
 						<artifactId>cargo-maven2-plugin</artifactId>
-						<version>1.4.9</version>
+						<version>1.6.0</version>
 						<configuration>
 							<container>
 								<timeout>300000</timeout>
 								<containerId>tomcat8x</containerId>
 								<zipUrlInstaller>
-									<url>http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.21/bin/apache-tomcat-8.0.21.zip</url>
+									<url>http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.38/bin/apache-tomcat-8.0.38.zip</url>
 								</zipUrlInstaller>
 							</container>
 							<properties>
 								<cargo.jvmargs>-XX:MaxPermSize=6G -Xms1G –Xmx8G</cargo.jvmargs>
 							</properties>
 							<configuration>
-								<files>
-									<copy>
-										<file>${basedir}/src/config/local/server.xml</file>
-										<tofile>conf/server.xml</tofile>
-										<configfile>true</configfile>
+								<configfiles>
+									<configfile>
+										<file>${basedir}/src/config/${runenv}/server.xml</file>
+										<todir>conf</todir>
 										<overwrite>true</overwrite>
-									</copy>
-								</files>
-								<properties>
-									<cargo.servlet.port>8443</cargo.servlet.port>
-									<cargo.protocol>https</cargo.protocol>
-									<cargo.tomcat.connector.clientAuth>false</cargo.tomcat.connector.clientAuth>
-									<cargo.tomcat.connector.sslProtocol>TLS</cargo.tomcat.connector.sslProtocol>
-									<cargo.tomcat.connector.keystoreFile>../../../../.keystore</cargo.tomcat.connector.keystoreFile>
-									<cargo.tomcat.connector.keystorePass>changeit</cargo.tomcat.connector.keystorePass>
-									<cargo.tomcat.connector.keyAlias>tomcat</cargo.tomcat.connector.keyAlias>
-									<cargo.tomcat.httpSecure>true</cargo.tomcat.httpSecure>
-								</properties>
-							</configuration>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>deploywremote</id>
-			<properties>
-				<skipTests>true</skipTests>
-			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.7</version>
-						<executions>
-							<execution>
-								<id>ldap-server</id>
-								<phase>package</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<target>
-										<ant target="run" antfile="${basedir}/src/config/build.xml">
-											<reference torefid="maven.compile.classpath" refid="maven.compile.classpath" />
-										</ant>
-									</target>
-								</configuration>
-							</execution>
-							<execution>
-								<id>database-server</id>
-								<phase>package</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<target>
-										<ant target="databaseServer" antfile="${basedir}/src/config/build.xml">
-											<reference torefid="maven.compile.classpath" refid="maven.compile.classpath" />
-										</ant>
-									</target>
-								</configuration>
-							</execution>
-							<execution>
-								<id>database-init</id>
-								<phase>package</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<target>
-										<ant target="databaseInit" antfile="${basedir}/src/config/build.xml">
-											<reference torefid="maven.compile.classpath" refid="maven.compile.classpath" />
-										</ant>
-									</target>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.cargo</groupId>
-						<artifactId>cargo-maven2-plugin</artifactId>
-						<version>1.4.9</version>
-						<configuration>
-							<container>
-								<timeout>300000</timeout>
-								<containerId>tomcat8x</containerId>
-								<zipUrlInstaller>
-									<url>http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.21/bin/apache-tomcat-8.0.21.zip</url>
-								</zipUrlInstaller>
-							</container>
-							<properties>
-								<cargo.jvmargs>-XX:MaxPermSize=6G -Xms1G –Xmx8G</cargo.jvmargs>
-							</properties>
-							<configuration>
-								<files>
-									<copy>
-										<file>${basedir}/src/config/remote/server.xml</file>
-										<tofile>conf/server.xml</tofile>
-										<configfile>true</configfile>
+									</configfile>
+									<configfile>
+										<file>${basedir}/src/config/${runenv}/context.xml</file>
+										<todir>conf</todir>
 										<overwrite>true</overwrite>
-									</copy>
-								</files>
+									</configfile>
+								</configfiles>
 								<properties>
 									<cargo.servlet.port>8443</cargo.servlet.port>
 									<cargo.protocol>https</cargo.protocol>
@@ -344,27 +253,31 @@
 					<plugin>
 						<groupId>org.codehaus.cargo</groupId>
 						<artifactId>cargo-maven2-plugin</artifactId>
-						<version>1.4.9</version>
+						<version>1.6.0</version>
 						<configuration>
 							<container>
 								<timeout>300000</timeout>
 								<containerId>tomcat8x</containerId>
 								<zipUrlInstaller>
-									<url>http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.21/bin/apache-tomcat-8.0.21.zip</url>
+									<url>http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.38/bin/apache-tomcat-8.0.38.zip</url>
 								</zipUrlInstaller>
 							</container>
 							<properties>
 								<cargo.jvmargs>-XX:MaxPermSize=6G -Xms1G –Xmx8G</cargo.jvmargs>
 							</properties>
 							<configuration>
-								<files>
-									<copy>
+								<configfiles>
+									<configfile>
 										<file>${basedir}/src/config/local/server.xml</file>
-										<tofile>conf/server.xml</tofile>
-										<configfile>true</configfile>
+										<todir>conf</todir>
 										<overwrite>true</overwrite>
-									</copy>
-								</files>
+									</configfile>
+									<configfile>
+										<file>${basedir}/src/config/local/context.xml</file>
+										<todir>conf</todir>
+										<overwrite>true</overwrite>
+									</configfile>
+								</configfiles>
 								<properties>
 									<cargo.jvmargs>
 										-Xmx4G
@@ -485,7 +398,20 @@
 	</repositories>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-server-standalone</artifactId>
@@ -497,6 +423,7 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.12</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
@@ -506,12 +433,6 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-		</dependency>
-		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
-			<version>7.0</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -547,10 +468,44 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
+		<!-- Kevin's fix for jar version conflicts -->
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>3.3.2.GA</version>
+			<exclusions>
+				<exclusion>
+					<groupId>asm</groupId>
+					<artifactId>asm</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>asm</groupId>
+					<artifactId>asm-attrs</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>cglib</groupId>
+					<artifactId>cglib</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib-nodep</artifactId>
+			<version>2.1_3</version>
+		</dependency>
+		<!-- END Kevin's fix for jar version conflicts -->
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -569,25 +524,7 @@
 			<artifactId>jta</artifactId>
 			<version>1.1</version>
 		</dependency>
-
-		<dependency>
-			<groupId>net.sourceforge.jwebunit</groupId>
-			<artifactId>jwebunit-core</artifactId>
-			<version>3.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>net.sourceforge.jwebunit</groupId>
-			<artifactId>jwebunit-htmlunit-plugin</artifactId>
-			<version>3.2</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>jcl-over-slf4j</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
+		
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
@@ -657,46 +594,53 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>4.1.5.RELEASE</version>
+			<version>4.1.7.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>4.1.6.RELEASE</version>
+			<version>4.1.7.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>4.1.5.RELEASE</version>
+			<version>4.1.7.RELEASE</version>
 		</dependency>
 		<!-- Begin of new dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>4.1.5.RELEASE</version>
+			<version>4.1.7.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>4.1.5.RELEASE</version>
+			<version>4.1.7.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
-			<version>4.1.5.RELEASE</version>
+			<version>4.1.7.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
-			<version>4.1.5.RELEASE</version>
+			<version>4.1.7.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-expression</artifactId>
-			<version>4.1.5.RELEASE</version>
+			<version>4.1.7.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.7</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
@@ -815,7 +759,6 @@
 			</exclusions>
 		</dependency>
 
-
 	</dependencies>
 
 	<build>
@@ -869,8 +812,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-
-
 	</build>
 
 	<reporting>
@@ -906,7 +847,8 @@
 		<failOnMissingWebXml>false</failOnMissingWebXml>
 		<skipTests>false</skipTests>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.war.webxml>${basedir}/src/config/web.xml</maven.war.webxml>
+		<runenv>local</runenv>
 	</properties>
-
 </project>
